patch: by @teamgram

--- a/Telegram/CMakeLists.txt
+++ b/Telegram/CMakeLists.txt
@@ -1366,12 +1366,12 @@ if (build_macstore)
         COMMAND rm -rf $<TARGET_FILE_DIR:Telegram>/../Frameworks/Breakpad.framework/Resources/Inspector
     )
 else()
-    set(bundle_identifier "com.tdesktop.Telegram$<$<CONFIG:Debug>:Debug>")
+    set(bundle_identifier "com.tdesktop.Teamgram$<$<CONFIG:Debug>:Debug>")
     set(bundle_entitlements "Telegram.entitlements")
     if (LINUX AND DESKTOP_APP_USE_PACKAGED)
-        set(output_name "telegram-desktop")
+        set(output_name "teamgram-desktop")
     else()
-        set(output_name "Telegram")
+        set(output_name "Teamgram")
     endif()
 endif()
 
